Feat: Titanium Gold refactoring for Regole Scadenze, improved Settings UI with flag icons, standardized Header injection

--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -33,20 +33,14 @@
 
         <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
 
-            <!-- EF-[#18] SAETTA MASTER -->
-            <div class="saetta-master"></div>
-
             <!-- New Password Card -->
-            <div
-                class="w-full max-w-md bg-[#0a0f1e]/70 backdrop-blur-2xl rounded-[24px] border-glow overflow-hidden group hover:-translate-y-1 transition-all duration-300 shadow-2xl relative z-40">
-                <div class="saetta"></div>
+            <div class="titanium-vault border-glow group">
 
                 <div class="px-8 pt-10 pb-10 relative z-10">
                     <!-- Icon Section -->
                     <div class="flex justify-center mb-8">
                         <div
                             class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <div class="saetta opacity-40"></div>
                             <span
                                 class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
@@ -61,16 +55,20 @@
                     <div class="mb-8 p-4 bg-white/5 rounded-2xl border border-white/5 no-select">
                         <div class="flex items-center gap-2 mb-2">
                             <span class="material-symbols-outlined text-blue-400 text-sm">security</span>
-                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest">Protocollo 12-3-3
+                            <h4 class="text-[10px] font-bold text-blue-400 uppercase tracking-widest"
+                                data-t="password_requirements">Protocollo 12-3-3
                             </h4>
                         </div>
                         <ul class="text-[11px] text-white/40 space-y-1 list-none italic leading-relaxed">
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Minimo 12 caratteri totali</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_min_chars">Minimo
+                                    12 caratteri totali</span></li>
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Lettere Maiuscole</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_upper">Almeno 3
+                                    Lettere Maiuscole</span></li>
                             <li class="flex items-center gap-2"><span
-                                    class="w-1 h-1 bg-blue-500 rounded-full"></span>Almeno 3 Simboli Speciali</li>
+                                    class="w-1 h-1 bg-blue-500 rounded-full"></span><span data-t="req_symbols">Almeno 3
+                                    Simboli Speciali</span></li>
                         </ul>
                     </div>
 
@@ -78,7 +76,8 @@
                         <!-- New Password -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Nuova
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="new_password">Nuova
                                 Password</label>
                             <div class="relative group/input">
                                 <input id="new-password" type="password" placeholder="••••••••••••" required
@@ -94,7 +93,8 @@
                         <!-- Confirm Password -->
                         <div class="space-y-2">
                             <label
-                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none">Conferma
+                                class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
+                                data-t="confirm_new_password">Conferma
                                 Password</label>
                             <div class="relative group/input">
                                 <input id="confirm-password" type="password" placeholder="••••••••••••" required
@@ -108,13 +108,21 @@
                         </div>
 
                         <!-- Action Button -->
-                        <button type="submit"
-                            class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
-                            <div class="relative z-10 flex items-center justify-center gap-2">
-                                <span class="tracking-widest uppercase text-xs">Salva nuova password</span>
-                                <span class="material-symbols-outlined text-sm">verified_user</span>
-                            </div>
-                        </button>
+                        <div class="space-y-3">
+                            <button type="submit"
+                                class="w-full h-14 bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-500 hover:to-blue-400 text-white font-extrabold rounded-2xl shadow-xl transition-all active:scale-[0.98] border-glow group/btn overflow-hidden">
+                                <div class="relative z-10 flex items-center justify-center gap-2">
+                                    <span class="tracking-widest uppercase text-xs" data-t="save_new_pass">Salva nuova
+                                        password</span>
+                                    <span class="material-symbols-outlined text-sm">verified_user</span>
+                                </div>
+                            </button>
+
+                            <button type="button" id="cancel-password-update"
+                                class="w-full h-14 bg-white/5 hover:bg-white/10 text-white/60 font-bold rounded-2xl transition-all active:scale-[0.98] border border-white/5">
+                                <span class="tracking-widest uppercase text-xs" data-t="cancel">Annulla</span>
+                            </button>
+                        </div>
                     </form>
 
                     <!-- Footer Link -->
