--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -37,13 +37,8 @@
         <!-- Main Content -->
         <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
 
-            <!-- 6. SAETTA MASTER (Riflesso Metallico Totale) -->
-            <div class="saetta-master"></div>
-
             <!-- Login Card (Il Box Campi) -->
-            <div
-                class="w-full max-w-md bg-[#0a0f1e]/70 backdrop-blur-2xl rounded-[24px] border-glow overflow-hidden group hover:-translate-y-1 active:scale-[0.98] transition-all duration-300 shadow-2xl relative z-40">
-                <div class="saetta"></div>
+            <div class="titanium-vault border-glow group">
 
 
                 <!-- Glow Overlay -->
@@ -56,7 +51,6 @@
                     <div class="flex justify-center mb-8">
                         <div
                             class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <div class="saetta opacity-40"></div>
                             <span
                                 class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
