--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -33,13 +33,8 @@
 
         <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
 
-            <!-- EF-[#18] SAETTA MASTER -->
-            <div class="saetta-master"></div>
-
             <!-- Registration Card -->
-            <div
-                class="w-full max-w-md bg-[#0a0f1e]/70 backdrop-blur-2xl rounded-[24px] border-glow overflow-hidden group hover:-translate-y-1 transition-all duration-300 shadow-2xl relative z-40">
-                <div class="saetta"></div>
+            <div class="titanium-vault border-glow group">
 
                 <!-- Hover Shimmer Overlay -->
                 <div
@@ -51,7 +46,6 @@
                     <div class="flex justify-center mb-8">
                         <div
                             class="h-20 w-20 rounded-2xl bg-gradient-to-tr from-blue-600 to-blue-400 flex items-center justify-center shadow-2xl shadow-blue-500/20 ring-1 ring-white/20 relative border-glow group-hover:scale-110 transition-transform duration-500">
-                            <div class="saetta opacity-40"></div>
                             <span
                                 class="material-symbols-outlined text-white text-[36px] drop-shadow-lg">security</span>
                         </div>
