--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -89,7 +89,7 @@
                             <input type="checkbox" id="face-id-toggle" class="titanium-toggle" checked>
                         </div>
                         <!-- SELETTORE BLOCCO AUTOMATICO -->
-                        <div class="p-5 border-t border-white/5">
+                        <div class="p-5 border-t border-slate-200 dark:border-white/5">
                             <div class="flex items-center gap-3 mb-4">
                                 <div class="settings-icon-box icon-indigo !mr-0">
                                     <span class="material-symbols-outlined">timer</span>
@@ -141,7 +141,7 @@
                         </div>
 
                         <!-- Lingua (Accordion Integrato) -->
-                        <div class="settings-item accordion-header !border-t border-white/5"
+                        <div class="settings-item accordion-header !border-t border-slate-200 dark:border-white/5"
                             data-target="language-options">
                             <div class="glass-shine"></div>
                             <div class="flex items-center">
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div id="language-options"
-                            class="accordion-content hidden border-t border-white/5 p-4 bg-black/20">
+                            class="accordion-content hidden border-t border-slate-200 dark:border-white/5 p-4 bg-slate-50 dark:bg-black/20">
                             <!-- Opzioni Lingua -->
                             <div class="space-y-2" id="language-list-container">
                                 <!-- ITALIANO -->
@@ -168,7 +168,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/it.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="IT">
-                                        <span class="text-white text-sm">Italiano</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">Italiano</span>
                                     </div>
                                     <span class="material-symbols-outlined text-emerald-400 check-icon">check</span>
                                 </button>
@@ -179,7 +179,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/gb.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="EN">
-                                        <span class="text-white text-sm">English</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">English</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -191,7 +191,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/es.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="ES">
-                                        <span class="text-white text-sm">Español</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">Español</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -203,7 +203,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/fr.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="FR">
-                                        <span class="text-white text-sm">Français</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">Français</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -215,7 +215,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/de.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="DE">
-                                        <span class="text-white text-sm">Deutsch</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">Deutsch</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -227,7 +227,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/cn.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="ZH">
-                                        <span class="text-white text-sm">简体中文</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">简体中文</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -239,7 +239,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/in.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="HI">
-                                        <span class="text-white text-sm">हिन्दी</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">हिन्दी</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -251,7 +251,7 @@
                                     <div class="flex items-center gap-3">
                                         <img src="https://flagcdn.com/w40/pt.png"
                                             class="w-6 h-6 rounded-full object-cover shadow-sm" alt="PT">
-                                        <span class="text-white text-sm">Português</span>
+                                        <span class="text-gray-900 dark:text-white text-sm">Português</span>
                                     </div>
                                     <span
                                         class="material-symbols-outlined text-emerald-400 check-icon opacity-0">check</span>
@@ -260,7 +260,7 @@
                         </div>
 
                         <!-- Regole Invio Scadenze (Integrato come ultimo item) -->
-                        <div class="settings-item !border-t border-white/5"
+                        <div class="settings-item !border-t border-slate-200 dark:border-white/5"
                             onclick="window.location.href='regole_scadenze_veicoli.html'">
                             <div class="glass-shine"></div>
                             <div class="flex items-center">
