--- a/Frontend/public/regole_scadenze_veicoli.html
+++ b/Frontend/public/regole_scadenze_veicoli.html
@@ -29,7 +29,7 @@
                     class="absolute inset-0 bg-blue-500/30 blur-2xl rounded-2xl opacity-0 group-hover:opacity-40 transition-opacity duration-500 pointer-events-none">
                 </div>
                 <div
-                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-[#1e293b]/80 border-glow backdrop-blur-md border border-white/5 hover:border-blue-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
+                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-white/80 dark:bg-[#1e293b]/80 border-slate-200 dark:border-glow backdrop-blur-md border dark:border-white/5 hover:border-blue-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
                     <div class="glass-shine"></div>
                     <div class="flex items-start justify-between">
                         <div
@@ -41,7 +41,7 @@
                     </div>
                     <div class="flex-1 min-w-0 pt-2">
                         <h3
-                            class="text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-blue-400 transition-colors">
+                            class="text-gray-900 dark:text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-blue-400 transition-colors">
                             Automezzi</h3>
                         <p class="text-xs text-gray-400 font-medium leading-relaxed">Configura oggetti, periodi e
                             frequenze email per veicoli</p>
@@ -55,7 +55,7 @@
                     class="absolute inset-0 bg-amber-500/30 blur-2xl rounded-2xl opacity-0 group-hover:opacity-40 transition-opacity duration-500 pointer-events-none">
                 </div>
                 <div
-                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-[#1e293b]/80 border-glow backdrop-blur-md border border-white/5 hover:border-amber-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
+                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-white/80 dark:bg-[#1e293b]/80 border-slate-200 dark:border-glow backdrop-blur-md border dark:border-white/5 hover:border-amber-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
                     <div class="glass-shine"></div>
                     <div class="flex items-start justify-between">
                         <div
@@ -67,7 +67,7 @@
                     </div>
                     <div class="flex-1 min-w-0 pt-2">
                         <h3
-                            class="text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-amber-400 transition-colors">
+                            class="text-gray-900 dark:text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-amber-400 transition-colors">
                             Documenti</h3>
                         <p class="text-xs text-gray-400 font-medium leading-relaxed">Gestione avvisi per Documenti e
                             Scadenze Varie</p>
@@ -81,7 +81,7 @@
                     class="absolute inset-0 bg-teal-500/30 blur-2xl rounded-2xl opacity-0 group-hover:opacity-40 transition-opacity duration-500 pointer-events-none">
                 </div>
                 <div
-                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-[#1e293b]/80 border-glow backdrop-blur-md border border-white/5 hover:border-teal-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
+                    class="relative flex flex-col h-full gap-4 p-5 rounded-2xl bg-white/80 dark:bg-[#1e293b]/80 border-slate-200 dark:border-glow backdrop-blur-md border dark:border-white/5 hover:border-teal-500/30 transition-all duration-300 hover:-translate-y-1 active:scale-[0.98] shadow-lg overflow-hidden">
                     <div class="glass-shine"></div>
                     <div class="flex items-start justify-between">
                         <div
@@ -93,7 +93,7 @@
                     </div>
                     <div class="flex-1 min-w-0 pt-2">
                         <h3
-                            class="text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-teal-400 transition-colors">
+                            class="text-gray-900 dark:text-white font-bold text-lg uppercase tracking-wider mb-1 group-hover:text-teal-400 transition-colors">
                             Regole Generali</h3>
                         <p class="text-xs text-gray-400 font-medium leading-relaxed">Configura oggetti e testi per
                             scadenze generiche</p>
@@ -108,11 +108,11 @@
                     <h3 class="text-purple-400 text-xs font-bold uppercase tracking-widest">APPUNTI SVILUPPO FUTURO</h3>
                 </div>
                 <div
-                    class="bg-black/20 border border-white/10 rounded-2xl p-4 shadow-inner relative group focus-within:border-purple-500/30 transition-colors">
+                    class="bg-slate-50 dark:bg-black/20 border border-slate-200 dark:border-white/10 rounded-2xl p-4 shadow-inner relative group focus-within:border-purple-500/30 transition-colors">
                     <textarea id="future_memo"
-                        class="w-full bg-transparent border-none text-[12px] leading-relaxed text-gray-300 placeholder:text-gray-600 focus:ring-0 p-0 resize-none min-h-[140px] scrollbar-thin scrollbar-thumb-white/10"
+                        class="w-full bg-transparent border-none text-[12px] leading-relaxed text-gray-900 dark:text-gray-300 placeholder:text-gray-600 focus:ring-0 p-0 resize-none min-h-[140px] scrollbar-thin scrollbar-thumb-white/10"
                         placeholder="Scrivi qui i tuoi appunti per il futuro..."></textarea>
-                    <div class="flex justify-end mt-2 pt-2 border-t border-white/5">
+                    <div class="flex justify-end mt-2 pt-2 border-t border-slate-200 dark:border-white/5">
                         <button id="save_memo_btn"
                             class="text-[11px] font-bold text-purple-400 hover:text-purple-300 flex items-center gap-1.5 px-3 py-1.5 rounded-lg hover:bg-purple-500/10 transition-colors">
                             <span class="material-symbols-outlined !text-[16px]">save</span> SALVA APPUNTO
