Titanium Gold Sync: Sincronizzazione universale layout e bugfix tema Light

--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -38,13 +38,7 @@
         <!-- 4. HEADER PLACEHOLDER -->
         <div id="header-placeholder"></div>
 
-        <!-- MAIN CONTENT (Titanium Main Strategy) -->
-        <main class="titanium-main no-select">
-
-            <!-- 6. SAETTA MASTER (Riflesso Metallico Totale) -->
-            <div class="saetta-master"></div>
-
-            <!-- SEARCH SECTION (Standardized Titanium Search) -->
+        <main class="titanium-main">
             <div class="px-2 mb-6 relative z-40">
                 <div class="relative group">
                     <div class="absolute inset-y-0 left-4 flex items-center pointer-events-none">
