--- a/Frontend/public/configurazione_documenti.html
+++ b/Frontend/public/configurazione_documenti.html
@@ -21,7 +21,7 @@
         <!-- HEADER INIETTATO DA JS -->
         <div id="header-placeholder"></div>
 
-        <main class="titanium-main no-select px-5 pt-4 space-y-6 pb-24">
+        <main class="titanium-main">
 
             <!-- Section: Tipo Documento -->
             <section
