--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -31,7 +31,7 @@
         <!-- HEADER PLACEHOLDER -->
         <div id="header-placeholder"></div>
 
-        <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
+        <main class="titanium-main !items-center !justify-center">
 
             <!-- New Password Card -->
             <div class="titanium-vault border-glow group">
