--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -35,7 +35,7 @@
         <div id="header-placeholder"></div>
 
         <!-- Main Content -->
-        <main class="flex-1 flex items-center justify-center p-6 relative z-30 mb-8 mt-16 pb-24 no-select">
+        <main class="titanium-main !items-center !justify-center">
 
             <!-- Login Card (Il Box Campi) -->
             <div class="titanium-vault border-glow group">
