--- a/Frontend/public/privacy.html
+++ b/Frontend/public/privacy.html
@@ -33,20 +33,16 @@
                 <a href="impostazioni.html"
                     class="group flex size-10 shrink-0 items-center justify-center rounded-xl bg-white/5 hover:bg-white/10 border-glow transition-all duration-300 active:scale-95 text-white">
                     <span
-                        class="material-symbols-outlined text-[24px] group-hover:-translate-x-0.5 transition-transform">arrow_back</span>
+                        class="material-symbols-outlined text-[20px] group-hover:-translate-x-1 transition-transform">arrow_back</span>
                 </a>
-                <h1
-                    class="text-lg font-bold leading-tight tracking-tight text-center flex-1 text-white uppercase opacity-90 truncate">
-                    Privacy Policy</h1>
-                <!-- Empty div for balance -->
-                <div class="size-10"></div>
+                <h1 class="text-sm font-bold uppercase tracking-widest text-white">Privacy Policy</h1>
             </div>
         </header>
 
         <!-- Header Spacer -->
         <div class="h-20 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-24 px-5">
+        <main class="titanium-main">
 
             <!-- Content -->
             <div class="space-y-6 text-sm text-gray-300 leading-relaxed text-justify">
