--- a/Frontend/public/regole_scadenze_veicoli.html
+++ b/Frontend/public/regole_scadenze_veicoli.html
@@ -21,7 +21,7 @@
         <!-- HEADER PURE -->
         <div id="header-placeholder"></div>
 
-        <main class="titanium-main no-select grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 pt-6">
+        <main class="titanium-main">
 
             <!-- Section: Automezzi -->
             <a href="configurazione_automezzi.html" class="group relative block h-full">
