--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -80,7 +80,7 @@
         <!-- Header Spacer -->
         <div class="h-16 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24 no-select">
+        <main class="titanium-main">
             <!-- Search Bar -->
             <div class="px-4 pt-4 pb-2">
                 <div class="relative">
