--- a/Frontend/public/aggiungi_scadenza.html
+++ b/Frontend/public/aggiungi_scadenza.html
@@ -163,7 +163,7 @@
         <div class="h-16 w-full shrink-0"></div>
 
         <!-- Main Content -->
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-32 px-6 py-8">
+        <main class="titanium-main">
             <div class="w-full max-w-2xl mx-auto flex flex-col gap-8">
 
                 <!-- 1. Intestatario & Categoria -->
@@ -484,7 +484,8 @@
                     <div>
                         <h4 class="text-sm font-bold text-gray-200">Dati Dinamici</h4>
                         <p class="text-[11px] text-gray-500 leading-relaxed mt-1">Se l'email contiene codici come
-                            <code>[Targa]</code>, verranno sostituiti automaticamente con i dati del veicolo.</p>
+                            <code>[Targa]</code>, verranno sostituiti automaticamente con i dati del veicolo.
+                        </p>
                     </div>
                 </div>
                 <div class="flex gap-4">
