--- a/Frontend/public/dati_anagrafici_privato.html
+++ b/Frontend/public/dati_anagrafici_privato.html
@@ -319,7 +319,7 @@
 
 
         <!-- Main Content -->
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-32">
+        <main class="titanium-main">
 
             <!-- Avatar & QR Section -->
             <div class="flex flex-col items-center pt-8 pb-4 px-4 gap-6">
