--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -74,7 +74,7 @@
         <!-- Header Spacer -->
         <div class="h-20 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24 pb-10">
+        <main class="titanium-main">
 
             <!-- Main Content -->
             <div class="p-5 flex flex-col gap-6">
