--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -177,7 +177,7 @@
         <!-- Header Spacer -->
         <div class="h-20 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
+        <main class="titanium-main">
             <!-- Hero Profile Header -->
             <div class="flex flex-col items-center justify-center pt-6 pb-6 px-4">
                 <div class="relative group">
