--- a/Frontend/public/dettaglio_scadenza.html
+++ b/Frontend/public/dettaglio_scadenza.html
@@ -95,7 +95,7 @@
         <!-- Header Spacer -->
         <div class="h-16 w-full shrink-0"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24 px-4 py-6 space-y-6">
+        <main class="titanium-main">
 
             <!-- Hero Status Card -->
             <div
