--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -112,7 +112,7 @@
         <div class="h-16 w-full shrink-0"></div>
 
         <!-- Main Content -->
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-32">
+        <main class="titanium-main">
             <div class="w-full max-w-2xl mx-auto px-6 py-8 flex flex-col gap-8">
 
                 <!-- Logo Uploader -->
