--- a/Frontend/public/modifica_account_privato.html
+++ b/Frontend/public/modifica_account_privato.html
@@ -110,7 +110,7 @@
         <div class="h-16 w-full shrink-0"></div>
 
         <!-- Main Content -->
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-32">
+        <main class="titanium-main">
             <div id="loading-overlay"
                 class="fixed inset-0 bg-[#0a0f1e]/90 z-[60] flex items-center justify-center hidden">
                 <div class="flex flex-col items-center gap-3">
