--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -114,7 +114,7 @@
         <div class="h-16 w-full shrink-0"></div>
 
         <!-- Main Content -->
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-32">
+        <main class="titanium-main">
             <div class="min-h-full flex flex-col">
 
                 <!-- 1. Logo Upload -->
