--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar pb-24">
+        <main class="titanium-main">
             <!-- Header Spacer (OBLIGATORY) -->
             <div class="h-16 w-full shrink-0"></div>
 
